<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16sp">

        <ImageView
            android:id="@+id/pill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/bottom_sheet_pill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/sort_by"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/sort_grp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp">

            <RadioButton
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_std_book"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:text="@string/rating_high_to_low" />

            <RadioButton
                android:id="@+id/cost_low_to_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_std_book"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:text="@string/cost_low_to_high" />

            <RadioButton
                android:id="@+id/cost_high_to_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_std_book"
                android:paddingStart="8dp"
                android:paddingTop="16dp"
                android:paddingEnd="0dp"
                android:paddingBottom="16dp"
                android:text="@string/cost_high_to_low" />
        </RadioGroup>

        <Button
            android:id="@+id/apply_btn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/circular_std_book"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>
</layout>