<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favouriteList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:listitem="@layout/list_item_restaurant" />

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:backgroundTint="?colorSurface"
            app:liftOnScroll="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/go_back"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_back" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/circular_std_medium"
                    android:text="@string/favourites" />
            </FrameLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/no_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/circular_std_book"
            android:text="@string/no_favourites"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp"
            android:visibility="gone" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
